<resources>
    <string name="app_name">防犯まちづくり</string>
    <string name="rb_hardsee">見えにくい</string>
    <string name="rb_easyenter">入りやすい</string>
    <string name="rb_bad">治安が悪い</string>
    <string name="rb_escape">避難できる</string>
    <string name="rb_attraction">まちの残したい場所</string>
    <string name="rb_action">安全への取り組み</string>
    <string name="rb_other">その他</string>
    <string name="tv_select"><u><b>どれか一つ選んでください</b></u></string>
    <string name="tv_detail"><u><b>詳細な情報</b></u></string>

    <string name="tv_location"><u><b>位置情報</b></u></string>
    <string name="bt_present">現在地</string>
    <string name="bt_other_location">検索</string>
    <string name="tv_comment"><u><b>コメント</b></u></string>
    <string name="bt_post">投稿</string>
    <string name="bt_input">セット</string>
    <string name="bt_delete">投稿の削除</string>
    <string name="tv_image"><u>写真を選択</u></string>
    <string name="tv_camera">カメラで撮る：</string>
    <string name="tv_gallery">ギャラリーから選ぶ：</string>
    <string name="tv_confirm">入力確認</string>
    <string name="dialog_confirm_ok">OK</string>
    <string name="dialog_confirm_cancel">キャンセル</string>

    <string name="menu_see_my_map">自分のマップを見る</string>
    <string name="menu_see_our_map">みんなのマップを見る</string>
    <string name="title_activity_maps">Map</string>

    <string name="tv_username">メールアドレス</string>
    <string name="bt_login">ログイン</string>
    <string name="bt_signup">登録</string>
    <string name="bt_logout">ログアウト</string>
    <string name="title_activity_all_post_maps">みんなのマップ</string>
    <string name="title_activity_my_post_map">投稿の確認</string>
    <string name="title_activity_all_post_map">みんなのマップ</string>
    <string name="tv_password">パスワード</string>
    <string name="tv_class">クラス</string>

    <string name="tv_present">現在地</string>
    <string name="title_activity_my_post_maps">Map</string>
    <string name="title_activity_my_maps_test">Map</string>
    <string name="title_activity_my_maps">Map</string>

    <string name="info_window_detail"><u>詳細な情報：</u></string>
    <string name="info_window_comment"><u>備考：</u></string>
    <string name="bt_emergency">緊急</string>
    <string name="bt_clear">入力内容をクリアする</string>
    <string name="menu_emergency">助けを呼ぶ</string>

    <string name="tv_spinner">所属</string>
    <string name="title_activity_organization">Map</string>
    <string name="bt_edit">編集</string>
    <string name="tv_image_2"><u><b>写真</b></u></string>
    <string name="tv_other_comment"><u>コメントしてみよう！</u></string>
    <string name="bt_update">コメント投稿</string>
    <string name="tv_info_other"><u>他の人からのコメント</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_email_password">EmailPasswordActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="edit">メールアドレスとパスワードを設定してください</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_all_maps">Map</string>
    <string name="comment"><u>備考</u></string>
    <string name="info_title"><b>アプリ説明</b></string>
    <string name="info_purpose">このアプリの目的</string>
    <string name="tv_private"><u>投稿の公開</u></string>

    <!-- Information.java -->
    <string name="info_purpose2">危険箇所や安全箇所を投稿し、マップを作製することで<u><b>防犯活動への住民参加の促進やまちの犯罪不安の軽減、活動の持続可能性</b></u>を高めることを目指す。</string>
    <string name="info_purpose3">さらに、まちの良いところを見つけることで<u><b>まちへの関心・愛着心の向上</b></u>を目指す。</string>
    <string name="info_kiken">犯罪が起こりやすい場所とは、</string>
    <string name="info_kiken2">誰もが<b><u>入りやすく</u></b>、誰からも<b><u>見えにくい</u></b>場所</string>
    <string name="info_example_str">例）</string>
    <string name="info_example1">＜１階が車庫の家が並ぶ道路＞</string>
    <string name="info_example1_1">１階が車庫という戸建て住宅が両側に並ぶ道路は誰もが<b>入りやすい</b></string>
    <string name="info_example1_2">生活空間が２階となるため、歩行者の姿が<b>見えにくい</b></string>
    <string name="info_example2">＜樹木に囲まれた公園＞</string>
    <string name="info_example2_1">大人の身長程度の樹木が公園の周囲に密集している公園は、ブロック塀に囲まれた公園と同じで、公園の周囲から中が<b>見えにくい</b></string>
    <string name="info_example3">これらのほかにも、死角や人の目がないところ、落書きがされているところは危険な場所とされている</string>
    <string name="info_input_example">マップ作製例を見る</string>
    <string name="info_shutten">出典：東京都都民安全推進本部総合推進部都民安全推進課「地域安全マップ作り指導マニュアル」</string>
    <string name="title_activity_maps_confirm">Map</string>
    <string-array name="list">
        <item>個人</item>
        <item>警察</item>
        <item>住民ボランティア</item>
        <item>自治体</item>
        <item>その他</item>
    </string-array>
    <string-array name="titlelist">
        <item>---選択してください---</item>
        <item>見えにくい場所</item>
        <item>入りやすい場所</item>
        <item>治安が悪い場所</item>
        <item>避難できる場所</item>
        <item>まちの残したい場所</item>
        <item>安全への取り組み</item>
        <item>その他</item>
    </string-array>
</resources>