<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <TextView
        android:id="@+id/tvmapTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_window_detail" />
    <TextView
        android:id="@+id/tvmapDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_window_comment"/>
    <TextView
        android:id="@+id/tvmapComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/tvInfoOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_other"/>
    <TextView
        android:id="@+id/tvInfoOther2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <ImageView
        android:id="@+id/ivMapCamera"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:scaleType="fitStart"/>
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>



</LinearLayout>