<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="#9999cc"
                    android:text="@string/tv_select"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            <Spinner
                android:id="@+id/sptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/titlelist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="#9999cc"
                    android:text="@string/tv_detail"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            <EditText
                android:id="@+id/etDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvExample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="#9999cc"
                    android:text="@string/tv_image"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_camera"
                    android:textColor="#000000" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ivCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCameraImageClick"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                />
            <Button
                android:id="@+id/btImageupload2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="画像アップロード"
                android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_gallery"
                    android:textColor="#000000" />
            <ImageView
                android:id="@+id/ivGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGyarallyClicked"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                app:srcCompat="@android:drawable/ic_menu_gallery"/>

                <Button
                    android:id="@+id/btImageupload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="画像アップロード"
                    android:textSize="10sp" />
                <ProgressBar
                    android:id="@+id/pbMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal|center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="#9999cc"
                    android:text="@string/tv_location"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="いずれかの方法で位置情報を入力してください"
                android:layout_marginBottom="8dp"
                android:textSize="5pt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A.現在地を取得する："
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp">

                    <Button
                        android:id="@+id/btPresent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:text="@string/bt_present"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="※ボタンに色がついてから押してください"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="B.地点を検索して入力する："
                    android:textColor="#000000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_other_location"
                    android:textSize="10sp" />
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C.緯度経度を入力する："
                    android:textColor="#000000" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="緯度" />

                <EditText
                    android:id="@+id/etSetLatitude"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="経度"/>

                <EditText
                    android:id="@+id/etSetLongitude"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal" />

                <Button
                    android:id="@+id/btInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="入力"
                    android:textSize="10sp" />
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="場所を確認する："
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"/>

                <Button
                    android:id="@+id/btShowMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="地図表示"
                    android:textSize="10sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="緯度"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="経度"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#9999cc"
                android:text="@string/tv_private"
                android:textColor="#FFFFFF"
                android:textSize="14sp"/>

                <RadioGroup
                    android:id="@+id/rgPrivate"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="公開" />

                    <RadioButton
                        android:id="@+id/rbOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="非公開" />
                </RadioGroup>

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#9999cc"
                android:text="@string/comment"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/bt_post" />

                <Button
                    android:id="@+id/btClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_clear"
                    android:layout_gravity="fill_horizontal"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>